# DML

./: .gitignore  AGENTS.md  AGENT_README_TO_OMNOM.md  BENCHMARK.md  BUGS.md  DEPLOYMENT_STATUS.md  Dockerfile  FINAL_STATUS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GPU_CONFIG.md  GPU_NOTES.md  GPU_SETUP.md  Makefile  NOTICE  OPENCLAW_INTEGRATION.md  QUICK_START.md  README.md  TEST_PLAN.md  TEST_RESULTS.md  build_dml_core.sh  build_dml_cuda.sh  compose.yaml  dml_example.py  dml_util.py  docker-compose.yml  example_dml.py  pyproject.toml  ruff.toml  run__dml_playground.sh  run_comprehensive_test.py  run_debug_test.py  setup.py  simple_test.py  test_dml_agent.py  test_dml_ready.py  test_fix_2026-02-25.md  visualize_dml_live.py
.github/workflows/: ci.yml
app/: dml_service.py  playground.py
bench/: bench_dml_vs_rag.py
changelog/: change_reorg
cma/: __init__.py  mcp_server.py  store.py
daystrom_dml/: __init__.py  api_client.py  cli.py  config.py  config.yaml  dml_adapter.py  embeddings.py  gpt_runner.py  memory_store.py  metrics.py  multi_rag.py  persistent_index.py  rag_store.py  retrievers.py  router.py  server.py  settings.py  utils.py  visualizer_bridge.py
daystrom_dml/stm/: controller.py
daystrom_dml/tests/: test_dml.py  test_maintenance.py  test_production.py  test_query.py  test_server_api.py  test_server_visualizer.py  test_summary_cache.py
daystrom_dml/web/: app.js  index.html  styles.css  visualizer.js
dml_core/: Dockerfile  README.md
dml_core/cma/: mcp_server.py
dml_core/daystrom_dml/: IMPLEMENTATION_COMPLETE.md  README_AGENTIC.md  __init__.py  agent_schema.py  api_contracts.py  cli.py  config.py  config.yaml  dml_adapter.py  dml_adapter_helper.py  embeddings.py  frontier_pipeline.py  gpt_runner.py  memory_store.py  multi_rag.py  ollama_wrapper.py  personality_matrix.py  policy_router.py  promotion_pipeline.py  provider_cli.py  provider_server.py  retrievers.py  server.py  settings.py  visualizer_bridge.py
dml_core/scripts/: embedding_compatibility_status.py
dml_core/tests/: test_embeddings.py  test_mcp_stub.py  test_transformers_backend_portability.py  test_transformers_backend_runtime_revision.py
dml_mcp/: Dockerfile  README.md  cma_mcp_server.py  dml_mcp_server.py
docs/: daystrom-agentic-harness-bible.md  daystrom-cognition-network-implementation-plan.md  daystrom-dpm-evolution-layer.md  daystrom-operator-bible.md  dcn-operator-guide.md  dcn-seed-model.md  dml-ollama-hardening-bundle-2-sprint-2-report.md  dml-ollama-hardening-bundle-2-sprint-3-report.md  dml-ollama-hardening-bundle-2-sprint-4-report.md  dml-ollama-hardening-bundle-2-sprint-5-report.md  dml-ollama-hardening-bundle-2-sprint-6-report.md  dml-ollama-hardening-bundle-2-sprint-7-report.md  dml-ollama-hardening-bundle-2-sprint-8-report.md  dml-ollama-hardening-bundle-2a-sprint-5-report.md  dml-ollama-hardening-bundle-2a-sprint-6-report.md  dpm-runtime-roadmap.md
docs/contracts/: README.md  openapi-paths-v1.json
docs/dpm-readonly-packet/: .gitignore  PROJECT.md
examples/: Dockerfile  README.md  __init__.py
examples/bench/: BENCHMARK_RESULTS.md  bench_dml_vs_rag.py  comprehensive_benchmark.py  final_benchmark.py  results-test.csv  (+2 more)
nemotron-agent-demo/: Dockerfile.ui  README.md  build_service.sh  docker-compose.nemotron3-nim-multi.yml  docker-compose.nemotron3-nim.yml  llm_client.py  ngc_login.sh  start_service.sh  stop_service.sh
openclaw-wrapper/: ADAPTER_CONTRACT.md  DEPLOY_PROD.md  MANIFEST.md  PARAMETERIZATION.md  SKILL.md
scripts/: agentic_frontier_cost_projection.py  build_dml_core.sh  build_dml_cuda.sh  curate_memory_store.py  download_models.py  e2e_feature_audit.py  frontier_compression_smoke.py  frontier_swarm_call.py  import_newdml_archive.py  install_daystrom_dml.sh  live_agentic_pipeline_benchmark.py  pipeline_stress_audit.py  run_agentic_eval.sh  run_dml_playground.sh  seed_epic_journey.py  seed_square_lattice.py
skills/: DEPLOY_PROD.md  README.md  SKILL.md  __init__.py
tests/: test_cma.py  test_router.py
(+172 files in other folders)
