[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cma"
version = "0.1.0"
description = "Concept Memory Adapter providing lossy associative memory for LLMs"
readme = "README.md"
authors = [{name="CMA Authors", email="cma@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
]
[project.optional-dependencies]
server = ["fastapi>=0.100", "uvicorn>=0.23"]
tokenizer = ["tiktoken>=0.4"]
embeddings = ["sentence-transformers>=2.2"]
faiss = ["faiss-cpu>=1.7"]
mcp = ["mcp>=0.1.0"]

[project.scripts]
cma = "cma.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
