[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "pybind11>=2.10",
    "numpy>=1.24",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "dml_core"
"dml_mcp" = "dml_mcp"

[tool.setuptools]
packages = [
    "daystrom_dml",
    "daystrom_dml.llm_backends",
    "daystrom_dml.provider_web",
    "daystrom_dml.stm",
    "daystrom_dml.cognition",
    "daystrom_dml.inference",
    "daystrom_dml.contracts",
    "daystrom_dml.contracts.schemas",
    "cma",
    "scripts",
    "dml_mcp",
]

[tool.setuptools.package-data]
"daystrom_dml" = [
    "web/*",
    "web/**/*",
    "provider_web/*",
]
"daystrom_dml.contracts.schemas" = ["*.json"]

[project]
name = "cma"
version = "0.1.0"
description = "Concept Memory Adapter providing lossy associative memory for LLMs"
readme = "README.md"
authors = [{name="CMA Authors", email="cma@example.com"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "fastapi>=0.100",
    "requests>=2.31",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "pydantic>=1.10",
    "pydantic-settings>=2.0",
    "prometheus_client>=0.16",
    "structlog>=23.2",
    "httpx>=0.26",
    "pypdf>=4.0",
    "python-multipart>=0.0.6",
]
[project.optional-dependencies]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "pypdf>=4.0",
    "httpx>=0.26",
    "websockets>=11.0",
]
tokenizer = ["tiktoken>=0.4"]
embeddings = ["sentence-transformers>=2.2"]
faiss = ["faiss-cpu>=1.7"]
multiplex_rag = [
    "chromadb>=0.4",
    "faiss-cpu>=1.7",
]
mcp = ["mcp>=0.1.0"]
playground = [
    "streamlit>=1.39",
    "plotly>=5.22",
]
cuda = ["pybind11>=2.10"]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.9",
    "mypy>=1.6.0",
    "httpx2>=2.3.0",
]

[project.scripts]
dml = "daystrom_dml.provider_cli:main"
cma = "cma.cli:app"
dml-ollama = "daystrom_dml.ollama_wrapper:main"
dml-server = "daystrom_dml.server:main"
dml-provider = "daystrom_dml.provider_server:main"
dml-mcp-server = "dml_mcp.dml_mcp_server:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = [".", "dml_core"]
